@@ -269,7 +269,7 @@ fun eval_thy document symbols last_timing update_time master_dir header text_pos
         if exists (Toplevel.is_skipped_proof o #2) res then ()
         else
           let val tex_source = Thy_Output.present_thy thy res toks |> Buffer.content;
-          in if document then Present.theory_output thy tex_source else () end
+          in if document then Present.theory_output text_pos thy tex_source else () end
       end;
 
   in (thy, present, size text) end;
